--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "portfolio-website",
   "homepage": "https://avadhootK.github.io/",
   "version": "0.1.0",
   "private": true,
