--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-scripts": "5.0.1",
     "react-typical": "^0.1.3",
     "tw-elements": "^1.0.0-alpha12",
