--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-lazy-load-image-component": "^1.5.5",
+    "react-lottie": "^1.2.3",
     "react-scripts": "5.0.1",
     "react-typical": "^0.1.3",
     "tw-elements": "^1.0.0-alpha12",
