--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
+    "aos": "^2.3.4",
     "framer-motion": "^6.3.3",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
@@ -17,8 +17,8 @@
     "react-lazy-load-image-component": "^1.5.5",
     "react-lottie": "^1.2.3",
     "react-scripts": "5.0.1",
-    "react-typical": "^0.1.3",
     "tw-elements": "^1.0.0-alpha12",
+    "typed.js": "^2.0.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
