--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "framer-motion": "^6.3.3",
     "gh-pages": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "react": "^18.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
